--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 <div class="container-fluid ">
    
-    <div class="row h-100 justify-content-center ">
+    <div class="row justify-content-center ">
         <form>
             <div class="form-group row title_l"><h2 class="justify-content-center mx-auto">LOGIN</h2></div>
             <div class="form-group row"id="form-row">
