--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
 <div class="container-fluid ">
    
     <div class="row justify-content-center ">
-        <form>
+        <form action="/" method="post">
             <div class="form-group row title_l"><h2 class="justify-content-center mx-auto">LOGIN</h2></div>
             <div class="form-group row"id="form-row">
                 <label for="inputEmail3" class="col-sm-4 col-form-label">Email</label>
                 <div class="col-sm-8">
-                    <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                    <input type="email" class="form-control" id="inputEmail3" name="username" placeholder="Email">
                 </div>
             </div>
             <div class="form-group row" id="form-row">
                 <label for="inputPassword3" class="col-sm-4 col-form-label">Password</label>
                 <div class="col-sm-8">
-                    <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                    <input type="password" class="form-control" id="inputPassword3" name="passwd" placeholder="Password">
                 </div>
             </div>
             <div class="form-group row br" id="form-row">
